--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build --base=/vanilla-app-template/",
-    "preview": "vite preview"
+    "deploy": "gh-pages -d src"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "glob": "^11.0.0",
     "postcss": "^8.4.41",
     "postcss-sort-media-queries": "^5.2.0",
     "vite": "^5.4.6"
   },
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Yelyzaveta Smolka <elizavetasmolka@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.10.0",
@@ -22,5 +21,6 @@
     "simplelightbox": "^2.14.3",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
-  }
+  },
+  "homepage": "https://elizkasss.github.io/goit-js-hw-11"
 }
